Adds configuration for Icinga for Windows v1.4.0

--- a/config/icinga/Invoke-IcingaCheckCPU.conf
+++ b/config/icinga/Invoke-IcingaCheckCPU.conf
@@ -3,7 +3,7 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckCPU'; exit Invoke-IcingaCheckCPU"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckCPU' "
             order = 0
         }
         "-Verbosity" = {
