--- a/config/icinga/Invoke-IcingaCheckDiskHealth.conf
+++ b/config/icinga/Invoke-IcingaCheckDiskHealth.conf
@@ -8,7 +8,7 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             order = 14
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckDiskHealth'; exit Invoke-IcingaCheckDiskHealth"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckDiskHealth' "
             order = 0
         }
         "-DiskWriteByteSecWarning" = {
@@ -123,7 +123,7 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             order = 5
         }
         "-DiskReadSecCritical" = {
-            description = "Critical treshold for disk Reads/sec is the rate of read operations on the disk."
+            description = "Critical threshold for disk Reads/sec is the rate of read operations on the disk."
             value = "$IcingaCheckDiskHealth_Object_DiskReadSecCritical$"
             order = 7
         }
@@ -146,7 +146,7 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             order = 99
         }
         "-DiskWriteSecWarning" = {
-            description = "Warning theeshold for disk Writes/sec is the rate of write operations on the disk."
+            description = "Warning threshold for disk Writes/sec is the rate of write operations on the disk."
             value = "$IcingaCheckDiskHealth_Object_DiskWriteSecWarning$"
             order = 8
         }
