--- a/config/icinga/Invoke-IcingaCheckEventlog.conf
+++ b/config/icinga/Invoke-IcingaCheckEventlog.conf
@@ -55,7 +55,7 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             order = 4
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckEventlog'; exit Invoke-IcingaCheckEventlog"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckEventlog' "
             order = 0
         }
         "-ExcludeSource" = {
