--- a/config/icinga/Invoke-IcingaCheckFirewall.conf
+++ b/config/icinga/Invoke-IcingaCheckFirewall.conf
@@ -7,7 +7,7 @@ object CheckCommand "Invoke-IcingaCheckFirewall" {
             order = 3
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckFirewall'; exit Invoke-IcingaCheckFirewall"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckFirewall' "
             order = 0
         }
         "-Profile" = {
