--- a/config/icinga/Invoke-IcingaCheckPerfcounter.conf
+++ b/config/icinga/Invoke-IcingaCheckPerfcounter.conf
@@ -32,7 +32,7 @@ object CheckCommand "Invoke-IcingaCheckPerfcounter" {
             order = 99
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckPerfcounter'; exit Invoke-IcingaCheckPerfcounter"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckPerfcounter' "
             order = 0
         }
     }
