--- a/config/icinga/Invoke-IcingaCheckStoragePool.conf
+++ b/config/icinga/Invoke-IcingaCheckStoragePool.conf
@@ -37,7 +37,7 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
             order = 4
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckStoragePool'; exit Invoke-IcingaCheckStoragePool"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckStoragePool' "
             order = 0
         }
         "-FreeSpaceCritical" = {
