--- a/config/icinga/Invoke-IcingaCheckBiosSerial.conf
+++ b/config/icinga/Invoke-IcingaCheckBiosSerial.conf
@@ -3,7 +3,7 @@ object CheckCommand "Invoke-IcingaCheckBiosSerial" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckBiosSerial'; exit Invoke-IcingaCheckBiosSerial"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckBiosSerial' "
             order = 0
         }
     }
