--- a/config/icinga/Invoke-IcingaCheckCheckSum.conf
+++ b/config/icinga/Invoke-IcingaCheckCheckSum.conf
@@ -3,7 +3,7 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckCheckSum'; exit Invoke-IcingaCheckCheckSum"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckCheckSum' "
             order = 0
         }
         "-Path" = {
