--- a/config/icinga/Invoke-IcingaCheckNLA.conf
+++ b/config/icinga/Invoke-IcingaCheckNLA.conf
@@ -3,7 +3,7 @@ object CheckCommand "Invoke-IcingaCheckNLA" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckNLA'; exit Invoke-IcingaCheckNLA"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckNLA' "
             order = 0
         }
         "-Profile" = {
