--- a/config/icinga/Invoke-IcingaCheckProcessCount.conf
+++ b/config/icinga/Invoke-IcingaCheckProcessCount.conf
@@ -3,7 +3,7 @@ object CheckCommand "Invoke-IcingaCheckProcessCount" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckProcessCount'; exit Invoke-IcingaCheckProcessCount"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckProcessCount' "
             order = 0
         }
         "-Verbosity" = {
