--- a/config/icinga/Invoke-IcingaCheckScheduledTask.conf
+++ b/config/icinga/Invoke-IcingaCheckScheduledTask.conf
@@ -14,7 +14,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             order = 2
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckScheduledTask'; exit Invoke-IcingaCheckScheduledTask"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckScheduledTask' "
             order = 0
         }
         "-NoPerfData" = {
