--- a/config/icinga/Invoke-IcingaCheckTimeSync.conf
+++ b/config/icinga/Invoke-IcingaCheckTimeSync.conf
@@ -3,7 +3,7 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckTimeSync'; exit Invoke-IcingaCheckTimeSync"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckTimeSync' "
             order = 0
         }
         "-Verbosity" = {
