--- a/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
@@ -3,7 +3,7 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckUsedPartitionSpace'; exit Invoke-IcingaCheckUsedPartitionSpace"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUsedPartitionSpace' "
             order = 0
         }
         "-Verbosity" = {
