--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -37,7 +37,7 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
             order = 4
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckStoragePool'; exit Invoke-IcingaCheckStoragePool"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckStoragePool' "
             order = 0
         }
         "-FreeSpaceCritical" = {
@@ -157,7 +157,7 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             order = 2
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckCertificate'; exit Invoke-IcingaCheckCertificate"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckCertificate' "
             order = 0
         }
         "-CertStore" = {
@@ -268,7 +268,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 5
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckICMP'; exit Invoke-IcingaCheckICMP"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckICMP' "
             order = 0
         }
     }
@@ -315,7 +315,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 13
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckDirectory'; exit Invoke-IcingaCheckDirectory"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckDirectory' "
             order = 0
         }
         "-ChangeOlderThan" = {
@@ -373,7 +373,7 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckUptime'; exit Invoke-IcingaCheckUptime"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUptime' "
             order = 0
         }
         "-Warning" = {
@@ -403,7 +403,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckUpdates'; exit Invoke-IcingaCheckUpdates"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUpdates' "
             order = 0
         }
         "-Verbosity" = {
@@ -443,7 +443,7 @@ object CheckCommand "Invoke-IcingaCheckTCP" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckTCP'; exit Invoke-IcingaCheckTCP"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckTCP' "
             order = 0
         }
         "-Verbosity" = {
@@ -524,7 +524,7 @@ object CheckCommand "Invoke-IcingaCheckPerfcounter" {
             order = 99
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckPerfcounter'; exit Invoke-IcingaCheckPerfcounter"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckPerfcounter' "
             order = 0
         }
     }
@@ -536,7 +536,7 @@ object CheckCommand "Invoke-IcingaCheckNLA" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckNLA'; exit Invoke-IcingaCheckNLA"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckNLA' "
             order = 0
         }
         "-Profile" = {
@@ -567,7 +567,7 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckMemory'; exit Invoke-IcingaCheckMemory"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckMemory' "
             order = 0
         }
         "-Verbosity" = {
@@ -607,7 +607,7 @@ object CheckCommand "Invoke-IcingaCheckProcessCount" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckProcessCount'; exit Invoke-IcingaCheckProcessCount"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckProcessCount' "
             order = 0
         }
         "-Verbosity" = {
@@ -648,7 +648,7 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckUsers'; exit Invoke-IcingaCheckUsers"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUsers' "
             order = 0
         }
         "-Verbosity" = {
@@ -694,7 +694,7 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             order = 14
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckDiskHealth'; exit Invoke-IcingaCheckDiskHealth"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckDiskHealth' "
             order = 0
         }
         "-DiskWriteByteSecWarning" = {
@@ -858,7 +858,7 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckTimeSync'; exit Invoke-IcingaCheckTimeSync"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckTimeSync' "
             order = 0
         }
         "-Verbosity" = {
@@ -918,7 +918,7 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             order = 8
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckNetworkInterface'; exit Invoke-IcingaCheckNetworkInterface"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckNetworkInterface' "
             order = 0
         }
         "-NoPerfData" = {
@@ -1148,7 +1148,7 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckCheckSum'; exit Invoke-IcingaCheckCheckSum"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckCheckSum' "
             order = 0
         }
         "-Path" = {
@@ -1192,7 +1192,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             order = 2
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckScheduledTask'; exit Invoke-IcingaCheckScheduledTask"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckScheduledTask' "
             order = 0
         }
         "-NoPerfData" = {
@@ -1224,7 +1224,7 @@ object CheckCommand "Invoke-IcingaCheckBiosSerial" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckBiosSerial'; exit Invoke-IcingaCheckBiosSerial"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckBiosSerial' "
             order = 0
         }
     }
@@ -1287,7 +1287,7 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             order = 4
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckEventlog'; exit Invoke-IcingaCheckEventlog"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckEventlog' "
             order = 0
         }
         "-ExcludeSource" = {
@@ -1395,7 +1395,7 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckCPU'; exit Invoke-IcingaCheckCPU"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckCPU' "
             order = 0
         }
         "-Verbosity" = {
@@ -1434,7 +1434,7 @@ object CheckCommand "Invoke-IcingaCheckFirewall" {
             order = 3
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckFirewall'; exit Invoke-IcingaCheckFirewall"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckFirewall' "
             order = 0
         }
         "-Profile" = {
@@ -1466,7 +1466,7 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
 
     arguments += {
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckUsedPartitionSpace'; exit Invoke-IcingaCheckUsedPartitionSpace"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUsedPartitionSpace' "
             order = 0
         }
         "-Verbosity" = {
@@ -1565,7 +1565,7 @@ object CheckCommand "Invoke-IcingaCheckService" {
             order = 3
         }
         "-C" = {
-            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckService'; exit Invoke-IcingaCheckService"
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckService' "
             order = 0
         }
     }
